--- a/Recurso_Trab3/PA3_GA/nbproject/private/private.properties
+++ b/Recurso_Trab3/PA3_GA/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\tsuru\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
+user.properties.file=/root/snap/netbeans/common/data/12.4/build.properties
